# stochastic_simulation

./: .gitignore  README.md  hello.py  pyproject.toml
exercises/: exercise1.ipynb  exercise2_and_3.ipynb  exercise5.ipynb
exercises_anton/: exercise1.html  exercise1.ipynb  exercise2_and_3.ipynb  exercise4.ipynb  exercise6.ipynb  exercise7.ipynb  exercise8.ipynb
exercises_final/: Exercise1.ipynb  Exercise2&3.ipynb  Exercise4.ipynb  Exercise5.ipynb  Exercise6.ipynb  exercise7.ipynb  exercise8.ipynb
exercises_magnus/: Exercise1.ipynb  Exercise2&3.ipynb  Exercise4.ipynb  Exercise5.ipynb  Exercise6.ipynb  Exercise7&8.ipynb
project1/: Part 1 - Magnus.ipynb  Part 1.ipynb  Part 3 - Anton.ipynb  Part 3 - Magnus.ipynb  Part 3.ipynb  Part1.ipynb  Part2 j.ipynb  Part2.ipynb  Part3.ipynb  anton.ipynb
project2/: MH.ipynb  Sensitivity analysis.ipynb  anime.py  anime2.py  cases.ipynb  initial_brainstorm.ipynb  jason.ipynb  kek.py  simulation_loop - Magnus.ipynb  simulation_loop.ipynb  simulation_loop.py  thinning.ipynb  thinning.py  util.py
project2/results/: scenario1.tex  scenario2.tex  scenario3.tex  scenario4.tex
